syntax = "proto3";

package client_proto;

service KeyValue {
	rpc ProcessGet (GetRequest) returns (GetResponse) {}
	rpc ProcessPut (PutRequest) returns (PutResponse) {}
	rpc ProcessDelete (DeleteRequest) returns (DeleteResponse) {}
}

message GetRequest {
	bytes key = 1;
}

message DeleteRequest{
	bytes key = 1;
}

message PutRequest {
	bytes key = 1;	
	bytes value = 2;
}

message GetResponse {
	bytes value = 1;
	enum Status {
		Success = 0;
		NotFound = 1;
	}
	Status status = 2;
}

message DeleteResponse {
	enum Status {
		Success = 0;
		NotFound = 1;
	}
	Status status = 1;
}

message PutResponse {
	enum Status {
		Success = 0;
		AlreadyExist = 1;
		InvalidKey = 2;
	}
	Status status = 2;
}